--- a/CSS/css.css
+++ b/CSS/css.css
@@ -586,6 +586,7 @@ main .container .view {
   align-items: center;
   justify-content: space-between;
   gap: 1.5rem;
+  flex-wrap: wrap;
 }
 .cus-theme .backgrounds > div {
   padding: var(--card-padding);
